Fixed bug on mobile, add missing meta

--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -40,7 +40,7 @@
     width: 50px;
     height: 50px;
     vertical-align: middle;
-    background: url("../../img/icon-mail.svg") no-repeat;
+    background: url("../img/icon-mail.svg") no-repeat;
   }
 }
 
@@ -61,7 +61,7 @@
     width: 50px;
     height: 50px;
     vertical-align: middle;
-    background: url("../../img/icon-cellphone.svg") no-repeat;
+    background: url("../img/icon-cellphone.svg") no-repeat;
   }
 }
 
@@ -82,7 +82,7 @@
     width: 50px;
     height: 50px;
     vertical-align: middle;
-    background: url("../../img/icon-skype.svg") no-repeat;
+    background: url("../img/icon-skype.svg") no-repeat;
   }
 }
 
