--- a/less/blocks/socials.less
+++ b/less/blocks/socials.less
@@ -25,13 +25,13 @@
   border: 3px solid @lightgrey;
   border-radius: 50%;
   &--vk {
-    background: url("../../img/icon-vk.svg") center no-repeat;
+    background: url("../img/icon-vk.svg") center no-repeat;
   }
   &--li {
-      background: url("../../img/icon-linkedin.svg") 65% 50% no-repeat;
+      background: url("../img/icon-linkedin.svg") 65% 50% no-repeat;
   }
   &--gh {
-    background: url("../../img/icon-github.svg") center no-repeat;
+    background: url("../img/icon-github.svg") center no-repeat;
   }
   &:hover {
     border-color: @orange;
